서버 누수방지, vcf업로드 기능 추가
